[gd_scene load_steps=27 format=3 uid="uid://7mmvptvm8oaa"]

[ext_resource type="Script" uid="uid://bifwf55i8nkye" path="res://Player/Entity/Camera.gd" id="1_f71a7"]
[ext_resource type="Script" uid="uid://bng6h2rgf8swi" path="res://Player/Entity/player.gd" id="1_hdlnp"]
[ext_resource type="Script" uid="uid://bds8xwudn2nns" path="res://Player/Entity/playerController.gd" id="1_mahfv"]
[ext_resource type="Shader" uid="uid://deu4icylu3kyq" path="res://Player/Entity/Shaders/PixelEffect.gdshader" id="2_4msa4"]
[ext_resource type="Script" uid="uid://blr8fm5ljldtk" path="res://Player/Entity/leg_controller.gd" id="5_stiq3"]
[ext_resource type="Script" uid="uid://ceoklndsisatb" path="res://Player/Entity/Target.gd" id="5_vkxho"]
[ext_resource type="Script" uid="uid://cp6rm5x1st4uk" path="res://Player/Entity/arm_controller.gd" id="6_82htd"]
[ext_resource type="Script" uid="uid://c0d6lg8j3tay6" path="res://Player/Entity/equipPartsController.gd" id="7_jmv62"]
[ext_resource type="Script" uid="uid://nffytd66dtd6" path="res://Player/Entity/removePartsController.gd" id="8_4mymh"]
[ext_resource type="PackedScene" uid="uid://7udxymqacxhy" path="res://Player/Entity/shared/health_bar.tscn" id="9_dd8ie"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jgdqt"]
size = Vector3(2, 2, 2)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mahfv"]
radius = 1.65229
height = 6.0

[sub_resource type="BoxMesh" id="BoxMesh_jgdqt"]
size = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mahfv"]
diffuse_mode = 3
albedo_color = Color(0.313726, 1, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_jgdqt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jgdqt"]
shading_mode = 0
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_f71a7"]
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hdlnp"]
diffuse_mode = 3
albedo_color = Color(0, 0.380392, 0.298039, 1)
rim_tint = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_82htd"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_82htd"]
albedo_color = Color(0.313726, 1, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_mahfv"]
size = Vector2(9, 5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hdlnp"]
render_priority = 0
shader = ExtResource("2_4msa4")

[sub_resource type="SphereMesh" id="SphereMesh_dd8ie"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vkxho"]
shading_mode = 0
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82htd"]
size = Vector2(575.75, 648)

[sub_resource type="LabelSettings" id="LabelSettings_jmv62"]
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="Node3D" node_paths=PackedStringArray("LegController", "ArmController")]
script = ExtResource("1_hdlnp")
LegController = NodePath("CharacterBody3D/LegController")
ArmController = NodePath("CharacterBody3D/ArmController")

[node name="CharacterBody3D" type="CharacterBody3D" parent="." node_paths=PackedStringArray("healthManager", "LegController", "ArmController") groups=["Player"]]
script = ExtResource("1_mahfv")
healthManager = NodePath("HealthBar")
LegController = NodePath("LegController")
ArmController = NodePath("ArmController")

[node name="Hitbox" type="Area3D" parent="CharacterBody3D" groups=["Player"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D/Hitbox"]
shape = SubResource("BoxShape3D_jgdqt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.94805, 0)
shape = SubResource("CapsuleShape3D_mahfv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
mesh = SubResource("BoxMesh_jgdqt")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_mahfv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
mesh = SubResource("SphereMesh_jgdqt")
surface_material_override/0 = SubResource("StandardMaterial3D_jgdqt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CharacterBody3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("SphereMesh_f71a7")
surface_material_override/0 = SubResource("StandardMaterial3D_hdlnp")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="CharacterBody3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.75, 0)
mesh = SubResource("BoxMesh_82htd")
surface_material_override/0 = SubResource("StandardMaterial3D_82htd")

[node name="AnchorPoints" type="Node3D" parent="CharacterBody3D/MeshInstance3D"]

[node name="LeftArm" type="Marker3D" parent="CharacterBody3D/MeshInstance3D/AnchorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)

[node name="RightArm" type="Marker3D" parent="CharacterBody3D/MeshInstance3D/AnchorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)

[node name="LeftLeg" type="Marker3D" parent="CharacterBody3D/MeshInstance3D/AnchorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -1, 0)

[node name="RightLeg" type="Marker3D" parent="CharacterBody3D/MeshInstance3D/AnchorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, -1, 0)

[node name="Head" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CharacterBody3D/Head"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
spring_length = 15.0
margin = 0.725
script = ExtResource("1_f71a7")

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Head/SpringArm3D"]
current = true
near = 0.001

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/Head/SpringArm3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1)
mesh = SubResource("PlaneMesh_mahfv")
surface_material_override/0 = SubResource("ShaderMaterial_hdlnp")

[node name="Node3D" type="Node3D" parent="CharacterBody3D/Head/SpringArm3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -6)

[node name="RayCast3D" type="RayCast3D" parent="CharacterBody3D/Head/SpringArm3D/Camera3D/Node3D" node_paths=PackedStringArray("target", "resetPosition")]
target_position = Vector3(0, 0, -50)
script = ExtResource("5_vkxho")
target = NodePath("CurrentPosition")
resetPosition = NodePath("ResetPosition")

[node name="CurrentPosition" type="Marker3D" parent="CharacterBody3D/Head/SpringArm3D/Camera3D/Node3D/RayCast3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/Head/SpringArm3D/Camera3D/Node3D/RayCast3D/CurrentPosition"]
mesh = SubResource("SphereMesh_dd8ie")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_vkxho")

[node name="ResetPosition" type="Marker3D" parent="CharacterBody3D/Head/SpringArm3D/Camera3D/Node3D/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)

[node name="LegController" type="Node3D" parent="CharacterBody3D" node_paths=PackedStringArray("LeftLegAnchor", "RightLegAnchor", "timer")]
script = ExtResource("5_stiq3")
LeftLegAnchor = NodePath("../MeshInstance3D/AnchorPoints/LeftLeg")
RightLegAnchor = NodePath("../MeshInstance3D/AnchorPoints/RightLeg")
timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="CharacterBody3D/LegController"]
wait_time = 0.8
one_shot = true

[node name="ArmController" type="Node3D" parent="CharacterBody3D" node_paths=PackedStringArray("LeftArmAnchor", "RightArmAnchor", "addPartsUI", "removeParts", "mesh", "weaponTarget")]
script = ExtResource("6_82htd")
LeftArmAnchor = NodePath("../MeshInstance3D/AnchorPoints/LeftArm")
RightArmAnchor = NodePath("../MeshInstance3D/AnchorPoints/RightArm")
addPartsUI = NodePath("EquipController")
removeParts = NodePath("RemoveController")
mesh = NodePath("../MeshInstance3D")
weaponTarget = NodePath("../Head/SpringArm3D/Camera3D/Node3D/RayCast3D/CurrentPosition")

[node name="Timer" type="Timer" parent="CharacterBody3D/ArmController"]
wait_time = 0.2

[node name="EquipController" type="AspectRatioContainer" parent="CharacterBody3D/ArmController" node_paths=PackedStringArray("leftArea", "rightArea", "playerCamera")]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_jmv62")
leftArea = NodePath("HBoxContainer/Left")
rightArea = NodePath("HBoxContainer/Right")
playerCamera = NodePath("../../Head/SpringArm3D")

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterBody3D/ArmController/EquipController"]
layout_mode = 2

[node name="Left" type="Area2D" parent="CharacterBody3D/ArmController/EquipController/HBoxContainer"]
position = Vector2(-252, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody3D/ArmController/EquipController/HBoxContainer/Left"]
position = Vector2(288.125, 323)
shape = SubResource("RectangleShape2D_82htd")

[node name="Left" type="Label" parent="CharacterBody3D/ArmController/EquipController/HBoxContainer/Left"]
offset_left = 252.0
offset_top = 312.0
offset_right = 282.0
offset_bottom = 335.0
text = "Left"

[node name="Right" type="Area2D" parent="CharacterBody3D/ArmController/EquipController/HBoxContainer"]
position = Vector2(-252, 0)

[node name="Right" type="Label" parent="CharacterBody3D/ArmController/EquipController/HBoxContainer/Right"]
offset_left = 864.0
offset_top = 312.0
offset_right = 905.0
offset_bottom = 361.0
size_flags_horizontal = 4
text = "Right
"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody3D/ArmController/EquipController/HBoxContainer/Right"]
position = Vector2(864.25, 323)
shape = SubResource("RectangleShape2D_82htd")

[node name="Label" type="Label" parent="CharacterBody3D/ArmController/EquipController"]
layout_mode = 2
text = "Equip
"
label_settings = SubResource("LabelSettings_jmv62")
horizontal_alignment = 1

[node name="RemoveController" type="AspectRatioContainer" parent="CharacterBody3D/ArmController" node_paths=PackedStringArray("leftArea", "rightArea", "playerCamera")]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("8_4mymh")
leftArea = NodePath("HBoxContainer/Left")
rightArea = NodePath("HBoxContainer/Right")
playerCamera = NodePath("../../Head/SpringArm3D")

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterBody3D/ArmController/RemoveController"]
layout_mode = 2

[node name="Left" type="Area2D" parent="CharacterBody3D/ArmController/RemoveController/HBoxContainer"]
position = Vector2(-252, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Left"]
position = Vector2(288.125, 323)
shape = SubResource("RectangleShape2D_82htd")

[node name="Left" type="Label" parent="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Left"]
offset_left = 252.0
offset_top = 312.0
offset_right = 282.0
offset_bottom = 335.0
text = "Left"

[node name="Right" type="Area2D" parent="CharacterBody3D/ArmController/RemoveController/HBoxContainer"]
position = Vector2(-252, 0)

[node name="Right" type="Label" parent="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Right"]
offset_left = 864.0
offset_top = 312.0
offset_right = 905.0
offset_bottom = 361.0
size_flags_horizontal = 4
text = "Right
"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Right"]
position = Vector2(864.25, 323)
shape = SubResource("RectangleShape2D_82htd")

[node name="Label" type="Label" parent="CharacterBody3D/ArmController/RemoveController"]
layout_mode = 2
text = "Remove"
label_settings = SubResource("LabelSettings_jmv62")
horizontal_alignment = 1

[node name="HealthBar" parent="CharacterBody3D" instance=ExtResource("9_dd8ie")]

[connection signal="timeout" from="CharacterBody3D/LegController/Timer" to="CharacterBody3D/LegController" method="_on_timer_timeout"]
[connection signal="mouse_entered" from="CharacterBody3D/ArmController/EquipController/HBoxContainer/Left" to="CharacterBody3D/ArmController/EquipController" method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="CharacterBody3D/ArmController/EquipController/HBoxContainer/Left" to="CharacterBody3D/ArmController/EquipController" method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="CharacterBody3D/ArmController/EquipController/HBoxContainer/Right" to="CharacterBody3D/ArmController/EquipController" method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="CharacterBody3D/ArmController/EquipController/HBoxContainer/Right" to="CharacterBody3D/ArmController/EquipController" method="_on_right_mouse_exited"]
[connection signal="mouse_entered" from="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Left" to="CharacterBody3D/ArmController/RemoveController" method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Left" to="CharacterBody3D/ArmController/RemoveController" method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Right" to="CharacterBody3D/ArmController/RemoveController" method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="CharacterBody3D/ArmController/RemoveController/HBoxContainer/Right" to="CharacterBody3D/ArmController/RemoveController" method="_on_right_mouse_exited"]
